--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.562.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
     "prisma": "^5.22.0",
     "react": "19.2.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.2.1",
     "react-hook-form": "^7.68.0",
     "sonner": "^2.0.7",
