--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dom-to-image-more": "^3.7.2",
     "dotenv": "^17.2.3",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.562.0",
     "next": "16.0.10",
     "next-themes": "^0.4.6",
